--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "task-clock",
-    "version": "2.0.0",
-    "description": "JavaScript task clock module",
+    "version": "2.0.2",
+    "description": "JavaScript task clock module featuring options start, interval, ticks and lastTick",
     "main": "index.js",
     "scripts": {},
     "repository": {
